# TradingSystemStack

./: .env.example  .gitignore  .gitpod.yml  =1.198.0  ATTRIBUTION_GUIDE.md  DEPLOYMENT_GUIDE.md  INSTALLATION.md  INSTALLATION_REPORT.md  ONLINE_SETUP_GUIDE.md  PAPER_TRADING_GUIDE.md  PORTFOLIO_GUIDE.md  PR_SESSIONS_3_4.md  QUICK_START.md  README.md  RISK_MANAGEMENT_GUIDE.md  TRADING_BOT_GUIDE.md  WINDOWS_SETUP.md  pyproject.toml  requirements.txt  requirements_frameworks.txt  run_attribution_dashboard.sh  run_dashboard.sh  run_framework_tests.py  run_live_dashboard.sh  run_paper_trading_bot.py  run_portfolio_dashboard.sh  run_risk_dashboard.sh  start_api.bat  start_api.ps1  start_api.sh  test_paper_trading.py  test_portfolio.py  test_system.py  test_system_offline.py  test_unified_backtest.py
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml
config/nautilus/: trading_node.yaml
config/strategies/: ema_default.yaml  macd_default.yaml  rsi_default.yaml
data/: manifest.yaml
data/fx/: demo_eurusd_h1.csv
docs/: MASTER_PLAN.md  REFACTORING_PLAN.md  SCANNER_DSL.md  SESSION_PLAN.md
docs/architecture/: ADAPTER_LAYER.md  FRAMEWORK_STACK.md
docs/backtesting/: ADVANCED_BACKTESTING.md
docs/nlp_ml/: ML_INTEGRATION.md  NLP_STRATEGY_EDITOR.md  README.md
docs/portfolio/: ATTRIBUTION_GUIDE.md  RISK_MANAGEMENT_GUIDE.md
docs/strategies/: ICT_METHODOLOGY.md  MARKET_MAKING.md  STATISTICAL_ARBITRAGE.md
examples/scans/: golden_cross.json  momentum_breakout.json  rsi_oversold.json
infra/: policy.yaml
scripts/: compare_backtest_engines.py  launch_attribution_dashboard.sh  launch_risk_dashboard.sh  migrate_data_to_arctic.py  run_all_tests.py  run_portfolio_analysis.py
src/: __init__.py  cli.py
src/adapters/: __init__.py  base_strategy_adapter.py  ema_adapter.py  ict_adapter.py  macd_adapter.py  mm_adapter.py  pairs_adapter.py  rsi_adapter.py  strategy_factory.py
src/api/: __init__.py  main.py
src/backtesting/: __init__.py  advanced_engine.py  backtrader_engine.py  base_engine.py  engine.py  engine_factory.py  metrics.py  monte_carlo.py  vectorbt_engine.py
src/breadth/: __init__.py  breadth_core.py
src/candlesticks/: __init__.py  detector.py  pandas_ta_patterns.py  talib_patterns.py
src/dashboard/: app.py  attribution_dashboard.py  live_dashboard.py  nlp_strategy_editor.py  portfolio_dashboard.py  risk_dashboard.py
src/data/: __init__.py  cache.py  fred.py  loaders.py  normalizers.py
src/data_sources/: __init__.py  crypto_data.py
src/economics/: __init__.py
src/flows/: prefect_flow.py
src/fundamentals/: __init__.py
src/ict_strategies/: __init__.py  fair_value_gaps.py  ict_strategy.py  liquidity_pools.py  order_blocks.py
src/indicators/: __init__.py  base.py  config.py  core.py  exceptions.py  validators.py
src/infrastructure/: __init__.py  arctic_manager.py  data_manager.py
src/market_making/: __init__.py  simple_mm.py
src/ml/: __init__.py  feature_engineering.py  ml_predictor.py
src/nlp_strategy/: __init__.py  code_generator.py  strategy_parser.py  strategy_pipeline.py
src/optimization/: __init__.py  walk_forward.py
src/paper_trading/: __init__.py  engine.py  live_bot.py  logger_config.py  models.py  telegram_notifier.py
src/patterns/: __init__.py  chart_patterns.py  geometry.py  models.py
src/portfolio/: __init__.py  models.py  optimizer.py  performance_attribution.py  portfolio_manager.py  risk_manager.py  telegram_alerts.py
src/quant_strategies/: __init__.py  pairs_trading.py
src/quant_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/raindrop/: __init__.py
src/relativereturns/: __init__.py
src/research/: vectorbt_strategies.py
src/risk/: gate.py
src/scanner/: __init__.py  dsl.py  engine.py  operators.py
src/sentiment/: __init__.py  (+2 more)
tests/: __init__.py  test_smoke.py
(+72 files in other folders)
