[project]
name = "quant-system"
version = "0.1.0"
description = "Vectorbt + Prefect baseline with risk gate and simple execution adapter"
requires-python = ">=3.11"
dependencies = [
  "pandas", "numpy", "numba", "vectorbt",
  "quantstats", "empyrical-reloaded",
  "prefect", "pydantic", "pyyaml",
  "ccxt", "ib-async",
  "freqtrade",
  "ta-lib"
]
